--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cronómetro</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100&display=swap" rel="stylesheet">
-    <link href="/style.css" rel="stylesheet">
-    <script src="/main.js" defer></script>
+    <link href="style.css" rel="stylesheet">
+    <script src="main.js" defer></script>
 </head>
 <body>
     <main>
